--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ font-size:larger;">
     "><a style="color: rgb(0, 255, 213);
     " href="https://1xbet-ptt9.top/" >Халявные 1000 руб прямо сейчас. нажимай!</a></button>
     <h1 style="text-align:center;">Начало Манги</h1>
-    <p>Да чтож такое:(</p>
+    <p mark style="background-color: white;">Да чтож такое:(</p>
     <p><b><mark style="background-color: blue;">Тут типо тоже текст</mark></b></p>
     <p><mark style="background-color:red "> Перилия и Эйс чет делают</mark></p>
     <h1>Архипилаг Грузи</h1>
